layout issues with footer

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -7,6 +7,7 @@
   gap: 5px;
   background-color: black;
   font-family: "Times New Roman", Times, serif;
+  margin-top: 50px;
 }
 .copyRight {
   color: white;
