--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -2,16 +2,15 @@
   display: flex;
   padding: 0 40px;
   margin-top: 20px;
-  min-height: 450px;
+  min-height: 100vh;
 }
 
 .landing--restaurants {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: max-content;
   grid-gap: 20px;
   width: 100%;
-  min-height: fit-content;
-  margin-bottom: 30px;
 }
 
 .landing--filters {
